EEVEE crash when keyframing integer properties on modifiers with motion blur enabled #81193

Closed
opened 2020-09-26 06:28:57 +02:00 by Tim Johansen · 26 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits, Windows-10-10.0.19041.630-SP0 64 Bits
Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38, GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: Bisecting points to 879ed5a165
Worked: Before 879ed5a165

Short description of error
While rendering with Eevee's motion blur enabled, a crash occurs when an integer property on a modifier is keyframed so that a step occurs a fraction of a frame later.

Exact steps for others to reproduce the error
NOTE: Heisenbug: It doesn’t appear when using a debug build.

Create a cube and attach an Array modifier to it.
Add keyframes to the Count property so that it is 1 on frame 1, and 5 on frame 39. This should result in the count value transitioning from 2 to 3 on frame 15.25 in the graph editor.
Attempt to render frame 14-16 with motion blur enabled by pressing Ctrl-F12. A crash should result.

Following the same steps with the Screw modifier's Iterations property results in the same crash, so it's not just an Array problem.

Workaround
Using Sample Keyframes on the animation curve prevents crashing, but obviously isn't ideal if the curve needs to be edited later.

This is my first time reporting a bug, so I hope this makes sense. Thanks for reading!
EeveeMotionBlurCrash1.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits, Windows-10-10.0.19041.630-SP0 64 Bits Graphics card: GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38, GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: Bisecting points to 879ed5a165 Worked: Before 879ed5a165 **Short description of error** While rendering with Eevee's motion blur enabled, a crash occurs when an integer property on a modifier is keyframed so that a step occurs a fraction of a frame later. **Exact steps for others to reproduce the error** NOTE: Heisenbug: It doesn’t appear when using a debug build. Create a cube and attach an Array modifier to it. Add keyframes to the Count property so that it is 1 on frame 1, and 5 on frame 39. This should result in the count value transitioning from 2 to 3 on frame 15.25 in the graph editor. Attempt to render frame 14-16 with motion blur enabled by pressing `Ctrl-F12`. A crash should result. Following the same steps with the Screw modifier's Iterations property results in the same crash, so it's not just an Array problem. **Workaround** Using Sample Keyframes on the animation curve prevents crashing, but obviously isn't ideal if the curve needs to be edited later. This is my first time reporting a bug, so I hope this makes sense. Thanks for reading! [EeveeMotionBlurCrash1.blend](https://archive.blender.org/developer/F9475085/EeveeMotionBlurCrash1.blend)
Author

Added subscriber: @timjvtx

Added subscriber: @timjvtx

#81740 was marked as duplicate of this issue

#81740 was marked as duplicate of this issue

#83371 was marked as duplicate of this issue

#83371 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can not reproduce crash. Does this happen when you click on File > Defaults > Load Factory Settings?

Run Blender with blender_debug_log.cmd and upload created files after crash.

I can not reproduce crash. Does this happen when you click on File > Defaults > Load Factory Settings? Run Blender with blender_debug_log.cmd and upload created files after crash.
Author

Yes, it happens with default factory settings. However, I dug out my laptop and copied over the same build, and things seem to work fine on there. I've attached the debug files for both.

Desktop (crashed)
desktop_blender_system_info.txt

desktop_blender_debug_output.txt

desktop_blender.crash.txt

Laptop (didn't crash)
laptop_blender_debug_output.txt

laptop_blender_system_info.txt

Yes, it happens with default factory settings. However, I dug out my laptop and copied over the same build, and things seem to work fine on there. I've attached the debug files for both. **Desktop (crashed)** [desktop_blender_system_info.txt](https://archive.blender.org/developer/F8941638/desktop_blender_system_info.txt) [desktop_blender_debug_output.txt](https://archive.blender.org/developer/F8941639/desktop_blender_debug_output.txt) [desktop_blender.crash.txt](https://archive.blender.org/developer/F8941640/desktop_blender.crash.txt) **Laptop (didn't crash)** [laptop_blender_debug_output.txt](https://archive.blender.org/developer/F8941644/laptop_blender_debug_output.txt) [laptop_blender_system_info.txt](https://archive.blender.org/developer/F8941645/laptop_blender_system_info.txt)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

from desktop_blender.crash.txt file it looks like crash in GPU driver. So please update drivers if possible.

from `desktop_blender.crash.txt` file it looks like crash in GPU driver. So please update drivers if possible.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Also cannot reproduce this.

@timjvtx: did you have any luck upgrading drivers?
Could you also check if this is still a problem in a fresh build from https://builder.blender.org/download/?

Also cannot reproduce this. @timjvtx: did you have any luck upgrading drivers? Could you also check if this is still a problem in a fresh build from https://builder.blender.org/download/?
Author

Sorry for not following up sooner. I'm currently running the latest Nvidia studio driver (version 456.71, 10/20/2020), and the crash still happens on today's build of 2.91. The only difference is that the debug log doesn't show the error anymore (pasted below). I was able to reproduce the crash on another PC that also has an RTX 2060, so maybe it's a quirk of that specific card. Probably not worth worrying about if that's the case.

I1027 15:30:28.558326 4776 blender_python.cpp:194] Debug flags initialized to:
CPU flags:

AVX2       : True
AVX        : True
SSE4.1     : True
SSE3       : True
SSE2       : True
BVH layout : EMBREE
Split      : False

CUDA flags:

Adaptive Compile : False

OptiX flags:

CUDA streams : 1

OpenCL flags:

Device type    : ALL
Debug          : False
Memory limit   : 0

I1027 15:30:28.619345 4776 device_opencl.cpp:48] CLEW initialization succeeded.
I1027 15:30:28.637349 4776 device_cuda.cpp:41] CUEW initialization succeeded
I1027 15:30:28.637349 4776 device_cuda.cpp:43] Found precompiled kernels

Sorry for not following up sooner. I'm currently running the latest Nvidia studio driver (version 456.71, 10/20/2020), and the crash still happens on today's build of 2.91. The only difference is that the debug log doesn't show the error anymore (pasted below). I was able to reproduce the crash on another PC that also has an RTX 2060, so maybe it's a quirk of that specific card. Probably not worth worrying about if that's the case. I1027 15:30:28.558326 4776 blender_python.cpp:194] Debug flags initialized to: CPU flags: ``` AVX2 : True AVX : True SSE4.1 : True SSE3 : True SSE2 : True BVH layout : EMBREE Split : False ``` CUDA flags: ``` Adaptive Compile : False ``` OptiX flags: ``` CUDA streams : 1 ``` OpenCL flags: ``` Device type : ALL Debug : False Memory limit : 0 ``` I1027 15:30:28.619345 4776 device_opencl.cpp:48] CLEW initialization succeeded. I1027 15:30:28.637349 4776 device_cuda.cpp:41] CUEW initialization succeeded I1027 15:30:28.637349 4776 device_cuda.cpp:43] Found precompiled kernels

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'
Richard Antalik self-assigned this 2020-11-14 05:47:57 +01:00

This really seems to be GPU related bug, and it may be resolved in future driver versions.
Unfortunately nvidia doesn't have bugtracker so this may take long time to be fixed.

So I will close this report. Thanks for reporting though.

This really seems to be GPU related bug, and it may be resolved in future driver versions. Unfortunately nvidia doesn't have bugtracker so this may take long time to be fixed. So I will close this report. Thanks for reporting though.

Added subscriber: @TarasKotulskyi

Added subscriber: @TarasKotulskyi

Windows 10
GTX 1070 & GTX 1060
Blender 2.92.0

Latest drivers (457.30 Studio)

I have the same crash issue with animated array integer and enabled motion blur in EEVEE.

# Blender 2.92.0, Commit date: 2020-11-22 18:21, Hash 7bab87c119f4

# backtrace
Exception Record:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION
Exception Address     : 0x00007FF9D0F4CA84
Exception Module      : nvoglv64.dll
Exception Flags       : 0x00000000
Exception Parameters  : 0x2
	Parameters[0] : 0x0000000000000000
	Parameters[1] : 0x0000000000000000


Stack trace:
nvoglv64.dll        :0x00007FF9D0D37B80  DrvPresentBuffers
nvoglv64.dll        :0x00007FF9D0C0D5C8  Symbols not available
Windows 10 GTX 1070 & GTX 1060 Blender 2.92.0 Latest drivers (457.30 Studio) I have the same crash issue with animated array integer and enabled motion blur in EEVEE. ``` # Blender 2.92.0, Commit date: 2020-11-22 18:21, Hash 7bab87c119f4 # backtrace Exception Record: ExceptionCode : EXCEPTION_ACCESS_VIOLATION Exception Address : 0x00007FF9D0F4CA84 Exception Module : nvoglv64.dll Exception Flags : 0x00000000 Exception Parameters : 0x2 Parameters[0] : 0x0000000000000000 Parameters[1] : 0x0000000000000000 Stack trace: nvoglv64.dll :0x00007FF9D0D37B80 DrvPresentBuffers nvoglv64.dll :0x00007FF9D0C0D5C8 Symbols not available ```
Member

Added subscribers: @fclem, @EAW

Added subscribers: @fclem, @EAW
Member

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'
Member

The crash started happening sometime between the Blender 2.90 2020-07-12 build and the full 2.90 release.

Thank you @timjvtx for that information, it was quite helpful at narrowing down the responsible commit.

@fclem bisecting points to 879ed5a165. As @lichtwerk and @iss are not able to reproduce, I am guessing this is a NVIDIA on Windows only issue, affecting drivers from 391.35 to 457.30, aka every Blender supported NVIDIA GPU.

Following #82808's lead, I'll set the preliminary priority to High, and tag 2.92.

> The crash started happening sometime between the Blender 2.90 2020-07-12 build and the full 2.90 release. Thank you @timjvtx for that information, it was quite helpful at narrowing down the responsible commit. @fclem bisecting points to 879ed5a165. As @lichtwerk and @iss are not able to reproduce, I am guessing this is a NVIDIA on Windows only issue, affecting drivers from 391.35 to 457.30, aka every Blender supported NVIDIA GPU. Following #82808's lead, I'll set the preliminary priority to High, and tag 2.92.
Member

Added subscriber: @Chris-Bell

Added subscriber: @Chris-Bell
Evan Wilson changed title from Eevee crash when keyframing integer properties on modifiers with motion blur enabled to EEVEE crash when keyframing integer properties on modifiers with motion blur enabled 2020-12-04 03:42:51 +01:00
Richard Antalik was unassigned by Evan Wilson 2020-12-04 03:42:51 +01:00
Member

Just noticed @Chris-Bell has a ATI Radeon RX580, so it doesn't look like it is just NVIDIA cards.
@Chris-Bell what driver do are you using?

I tested the file from #82808 at the same time as this one and #83371. While the same commit is responsible for crashing on my machine, #82808's file is too complex, with no keyframed arrays that I can see, for me to comfortably merge the reports.

Just noticed @Chris-Bell has a ATI Radeon RX580, so it doesn't look like it is just NVIDIA cards. @Chris-Bell what driver do are you using? I tested the file from #82808 at the same time as this one and #83371. While the same commit is responsible for crashing on my machine, #82808's file is too complex, with no keyframed arrays that I can see, for me to comfortably merge the reports.

In #81193#1067972, @EAW wrote:
Just noticed @Chris-Bell has a ATI Radeon RX580, so it doesn't look like it is just NVIDIA cards.
@Chris-Bell what driver do are you using?

I'm using the stable release of Adrenalin 2020, version 20.9.1

> In #81193#1067972, @EAW wrote: > Just noticed @Chris-Bell has a ATI Radeon RX580, so it doesn't look like it is just NVIDIA cards. > @Chris-Bell what driver do are you using? I'm using the stable release of Adrenalin 2020, version 20.9.1

Added subscribers: @mingoo, @HooglyBoogly

Added subscribers: @mingoo, @HooglyBoogly

This issue was referenced by 38bb263422

This issue was referenced by 38bb26342227759e8e2ccd98e1b4e800ca141fb2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-01-30 17:05:15 +01:00
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:16:03 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81193
No description provided.