Fix T81193 EEVEE: Crash when motion blur is aborted at cache finish

This was caused by a use after free. The issue was that the motion steps
were successfully gathered but failling the last vertex count check,
discarding the copied VBOs but not removing the reference of the first
VBO which was passing the test.